test/fail_compile/ce_sym_undef.tas
# we should fail to compile when a .Lreference is outstanding
.word .Lfoo
